--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app",
     "test": "mocha tests/*"
   },
   "author": "Britney L. <ultrabluewolf-fb2@yahoo.com>",
@@ -14,13 +15,16 @@
     "mocha": "~2.2.5"
   },
   "dependencies": {
+    "async": "~1.4.0",
+    "bluebird": "^2.9.34",
+    "bunyan": "^1.4.0",
     "config": "~1.14.0",
     "debug": "~2.2.0",
-    "fs-extra": "~0.22.1",
     "express": "~4.13.1",
+    "fs-extra": "~0.22.1",
     "lodash": "~3.10.0",
     "moment": "~2.10.3",
-    "async": "~1.4.0",
-    "request": "~2.60.0"
+    "request": "~2.60.0",
+    "request-promise": "^0.4.2"
   }
 }
