--- a/package.json
+++ b/package.json
@@ -9,22 +9,31 @@
   },
   "author": "Britney L. <ultrabluewolf-fb2@yahoo.com>",
   "license": "MIT",
-  "devDependencies": {
-    "chai": "~3.2.0",
-    "gulp": "~3.9.0",
-    "mocha": "~2.2.5"
-  },
   "dependencies": {
     "async": "~1.4.0",
     "bluebird": "^2.9.34",
+    "body-parser": "^1.13.2",
     "bunyan": "^1.4.0",
     "config": "~1.14.0",
+    "consolidate": "^0.13.1",
     "debug": "~2.2.0",
+    "ejs": "^2.3.3",
     "express": "~4.13.1",
     "fs-extra": "~0.22.1",
     "lodash": "~3.10.0",
     "moment": "~2.10.3",
     "request": "~2.60.0",
     "request-promise": "^0.4.2"
+  },
+  "devDependencies": {
+    "chai": "~3.2.0",
+    "del": "^1.2.0",
+    "gulp": "~3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.3.4",
+    "mocha": "~2.2.5"
   }
 }
