build: asset tasks

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "jquery": "~2.1.4",
     "lodash": "~3.10.0",
     "moment": "~2.10.3",
-    "async": "~1.4.0"
+    "async": "~1.4.0",
+    "normalize.css": "~3.0.3",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "mocha": "~2.2.5",
