build: bower install then build assets after node deps installed

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "postinstall": "bower install && gulp build",
     "start": "node app",
     "test": "mocha tests/*"
   },
