--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "request-promise": "^0.4.2"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "chai": "~3.2.0",
     "del": "^1.2.0",
     "gulp": "~3.9.0",
