--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,11 @@
     "moment": "~2.10.3",
     "async": "~1.4.0",
     "normalize.css": "~3.0.3",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular": "~1.4.3",
+    "angular-resource": "~1.4.3",
+    "ui-router": "~0.2.15",
+    "angular-sanitize": "~1.4.3"
   },
   "devDependencies": {
     "mocha": "~2.2.5",
