--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp": "~3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
+    "gulp-ng-annotate": "^1.0.0",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
