--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "author": "Britney L. <ultrabluewolf-fb2@yahoo.com>",
   "license": "MIT",
+  "cacheDirectories": [
+    "node_modules",
+    "bower_components"
+  ],
   "dependencies": {
     "async": "~1.4.0",
     "bluebird": "^2.9.34",
