Cache game title, app id mappings
Redis configured for game mapping caching. App ids are now being fetched from this cache.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.3.3",
     "express": "~4.13.1",
     "fs-extra": "~0.22.1",
+    "ioredis": "^1.7.1",
     "lodash": "~3.10.0",
     "moment": "~2.10.3",
     "request": "~2.60.0",
