--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^4.3.4",
-    "mocha": "~2.2.5"
+    "mocha": "~2.2.5",
+    "node-mocks-http": "^1.4.3",
+    "rewire": "^2.3.4"
   }
 }
