--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.2",
     "bunyan": "^1.4.0",
+    "cheerio": "^0.19.0",
     "config": "~1.14.0",
     "consolidate": "^0.13.1",
     "debug": "~2.2.0",
